Modification des pages pour les liens de navigations

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -26,14 +26,16 @@
 
             <div class="sectionAutreIcone">
                 <div class="panier autreIcone">
-                    <span class="icone"><i class="fas fa-shopping-cart"></i></span><span
-                        class="textIcone1">Panier</span>
+                    <a href="../panier/panier.html"><span class="icone"><i class="fas fa-shopping-cart"></i></span></a>                    
+                    <span class="textIcone1">Panier</span>
                 </div>
                 <div class="favoris autreIcone">
-                    <span class="icone"><i class="fas fa-heart"></i></span><span class="textIcone1">Favoris</span>
+                    <a href="#"><span class="icone"><i class="fas fa-heart"></i></span></a>
+                    <span class="textIcone1">Favoris</span>
                 </div>
                 <div class="user autreIcone">
-                    <span class="icone "><i class="fas fa-user"></i></span><span class="textIcone">Se connecter</span>
+                    <a href="../connexion/connexion.html"><span class="icone iconeUser"><i class="fas fa-user"></i></span></a>
+                    <span class="textIcone">Se connecter</span>
                 </div>
 
             </div>
@@ -46,36 +48,35 @@
 
     <div class="secondMenu">
         <div class="cat">
-            <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span
-                class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+            <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
         </div>
 
         <div class="accueil">
-            <a href="">ACCUEIL</a>
+            <a href="../accueil/accueil.html">ACCUEIL</a>
         </div>
 
         <div>
-            <a href="Galerie/galerie.html">GALERIE</a>
+            <a href="../galerie/galerie.html">GALERIE</a>
         </div>
 
         <div>
-            <a href="metiers/index.html">METIERS</a>
+            <a href="../metiers/index.html">METIERS</a>
         </div>
 
         <div>
-            <a href="contact/contact.html">CONTACT</a>
+            <a href="../contact/contact.html">CONTACT</a>
+        </div>
+
+        <div class="boutique">
+            <a href="../boutiques/boutique.html">BOUTIQUES</a>
         </div>
 
         <div>
-            <a href="boutiques/boutique.html">BOUTIQUES</a>
-        </div>
-
-        <div>
-            <a href="#">COLLECTION</a>
+            <a href="../collection/collection.html">COLLECTION</a>
         </div>
 
         <div class="perso">
-            <a href="">ESPACE-PERSO</a>
+            <a href="#" >ESPACE-PERSO</a>
         </div>
     </div>
     <!-- Fin deuxieme menu  -->
