--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -13,7 +13,7 @@
     <header>
         <div class="firstMenu">
             <div class="logo">
-             <img src="../logoo.png" alt="">
+             <img src="logoo.png" alt="">
             </div>
             <div class="mesIcones">
                 <div class="recherche">
@@ -44,7 +44,7 @@
 
         <div class="secondMenu">
             <div class="cat">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+                <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
