--- a/panier/panier.html
+++ b/panier/panier.html
@@ -48,35 +48,35 @@
 
         <div class="secondMenu">
             <div class="cat">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="fa-solid fa-chevron-right fa-rotate-90"></i></span>
+                <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
-                <a href="">ACCUEIL</a>
+                <a href="../accueil/accueil.html">ACCUEIL</a>
             </div>
 
             <div>
-                <a href="Galerie/galerie.html">GALERIE</a>
+                <a href="../galerie/galerie.html">GALERIE</a>
             </div>
 
             <div>
-                <a href="metiers/index.html">METIERS</a>
+                <a href="../metiers/index.html">METIERS</a>
             </div>
 
             <div>
-                <a href="contact/contact.html">CONTACT</a>
+                <a href="../contact/contact.html">CONTACT</a>
+            </div>
+
+            <div class="boutique">
+                <a href="../boutiques/boutique.html">BOUTIQUES</a>
             </div>
 
             <div>
-                <a href="boutiques/boutique.html">BOUTIQUES</a>
-            </div>
-
-            <div>
-                <a href="#">COLLECTION</a>
+                <a href="../collection/collection.html">COLLECTION</a>
             </div>
 
             <div class="perso">
-                <a href="" >ESPACE-PERSO</a>
+                <a href="#" >ESPACE-PERSO</a>
             </div>
         </div>
         <!-- Fin deuxieme menu  -->
