--- a/accueil/accueil.html
+++ b/accueil/accueil.html
@@ -19,7 +19,7 @@
         <!-- Debut premier menu  -->
         <div class="firstMenu">
             <div class="logo">
-             <img src="logoo.png" alt="">
+             <img src="images/logoo.png" alt="">
             </div>
             <div class="mesIcones">
                 <div class="recherche">
@@ -50,35 +50,35 @@
 
         <div class="secondMenu">
             <div class="cat">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+                <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
-                <a href="accueil.html">ACCUEIL</a>
+                <a href="#">ACCUEIL</a>
             </div>
 
             <div>
-                <a href="Galerie/galerie.html">GALERIE</a>
+                <a href="../galerie/galerie.html">GALERIE</a>
             </div>
 
             <div>
-                <a href="metiers/index.html">METIERS</a>
+                <a href="../metiers/index.html">METIERS</a>
             </div>
 
             <div>
-                <a href="contact/contact.html">CONTACT</a>
+                <a href="../contact/contact.html">CONTACT</a>
             </div>
 
             <div>
-                <a href="boutiques/boutique.html">BOUTIQUES</a>
+                <a href="../boutiques/boutique.html">BOUTIQUES</a>
             </div>
 
             <div>
-                <a href="collection/collection.html">COLLECTION</a>
+                <a href="../collection/collection.html">COLLECTION</a>
             </div>
 
             <div class="perso">
-                <a href="" >ESPACE-PERSO</a>
+                <a href="#" >ESPACE-PERSO</a>
             </div>
         </div>
         <!-- Fin deuxieme menu  -->
