--- a/toutesCategorie/toutesCategorie.html
+++ b/toutesCategorie/toutesCategorie.html
@@ -48,7 +48,7 @@
 
         <div class="secondMenu">
             <div class="touteCategorie">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+                <span class="cat"><a href="#">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
