Modification de quelques liens de navigation

--- a/boutiques/boutique.html
+++ b/boutiques/boutique.html
@@ -49,7 +49,7 @@
 
         <div class="secondMenu">
             <div class="cat">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+                <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
