--- a/collection/collection.html
+++ b/collection/collection.html
@@ -140,7 +140,7 @@
     
         <div class="secondMenu">
             <div class="cat">
-                <span class="cat"><a href="toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
+                <span class="cat"><a href="../toutesCategorie/toutesCategorie.html">TOUTES LES CATEGORIES</a></span><span class="iconeChevron"><i class="bi bi-chevron-down"></i></span>
             </div>
 
             <div class="accueil">
@@ -163,7 +163,7 @@
                 <a href="../boutiques/boutique.html">BOUTIQUES</a>
             </div>
 
-            <div>
+            <div class="collection">
                 <a href="../collection/collection.html">COLLECTION</a>
             </div>
 
