--- a/contact/contact.html
+++ b/contact/contact.html
@@ -63,7 +63,7 @@
             <a href="../metiers/index.html">METIERS</a>
         </div>
 
-        <div>
+        <div class="contact">
             <a href="../contact/contact.html">CONTACT</a>
         </div>
 
