--- a/metiers/index.html
+++ b/metiers/index.html
@@ -58,7 +58,7 @@
                 <a href="../galerie/galerie.html">GALERIE</a>
             </div>
 
-            <div>
+            <div class="met">
                 <a href="../metiers/index.html">METIERS</a>
             </div>
 
