--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="galerie.css">
     <link rel="stylesheet" href="../pageCSS/header.css">
     <link rel="stylesheet" href="../pageCSS/Footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -51,7 +53,7 @@
                 <a href="../accueil/accueil.html">ACCUEIL</a>
             </div>
 
-            <div>
+            <div class="galerie">
                 <a href="../galerie/galerie.html">GALERIE</a>
             </div>
 
